# against-wind

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  STRAVA_INTEGRATION.md  api.dockerfile  docker-compose.yml  main.py  pyproject.toml  ui.dockerfile
.github/workflows/: deploy.yml
.windsurf/rules/: general.md
api/: .env.example  alembic.ini
api/alembic/: env.py
api/app/: main.py
api/app/api/: routes.py  strava.py
api/app/core/: config.py  logging.py
api/app/domain/: classify.py  models.py
api/app/geo/: gpx.py  interp.py
api/app/providers/: base.py  open_meteo.py
api/app/services/: analyze.py
api/app/storage/: cache.py  db.py  s3.py
api/app/worker/: worker.py
api/migrations/: 001_initial_schema.sql
api/tests/: conftest.py
api/tests/e2e/: test_gpx_upload.py
api/tests/gpx_samples/: glossop-sheffield-without-imestamp.gpx
cloudflare-worker/: package.json  wrangler.toml
cloudflare-worker/src/: index.ts
scripts/: dev-setup.sh  test.sh
ui/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: AnalysisPanel.tsx  Header.tsx  HealthCheckIndicator.tsx  RouteMap.tsx  SettingsPanel.tsx  StravaIntegration.tsx  ThemeProviders.tsx  ThemeToggle.tsx  UploadForm.tsx
ui/components/analysis/: AnalysisPanel.tsx  AnalysisProgressDisplay.tsx  TimingModeSelector.tsx
ui/components/map/: MapOverlay.tsx  RouteMap.tsx  WindAnalysisLegend.tsx  WindSegmentTooltip.tsx
ui/lib/: demo-cache.json  demo.ts  utils.ts
ui/lib/contexts/: ThemeContext.tsx
(+7 files in other folders)
