[project]
name = "against-wind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "boto3>=1.34.0",
    "httpx>=0.25.2",
    "python-multipart>=0.0.6",
    "gpxpy>=1.5.0",
    "numpy>=1.24.3",
    "scipy>=1.11.4",
    "shapely>=2.0.2",
    "rq>=1.15.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-instrumentation-redis>=0.42b0",
    "greenlet>=3.2.4",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.9",
]
test =[
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.7.0",
]
[tool.uv]
default-groups = ["dev", "test"]

[tool.pytest.ini_options]
testpaths = ["api/tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
asyncio_mode = "auto"


[tool.ruff]
exclude = [".venv",".py"]
